# AnonyChat

./: .gitignore  CMakeLists.txt  ChatServer  a.out  os.c  virus.c
include/: url.h  util.h
public/: call.html  chat.html  index.html  video.html
public/music/: index.html
public/scripts/: websocket.js
src/: main.cc  url.cc  util.cc
